@@ -7,12 +7,12 @@
 #ifndef _INC_CRTDEFS
 #define _INC_CRTDEFS
 
-#ifndef MINGW64
-#define MINGW64
-#define MINGW64_VERSION	"1.0"
-#define MINGW64_VERSION_MAJOR	1
-#define MINGW64_VERSION_MINOR	0
-#define MINGW64_VERSION_STATE	"beta"
+#ifndef __MINGW64
+#define __MINGW64
+#define __MINGW64_VERSION	"1.0"
+#define __MINGW64_VERSION_MAJOR	1
+#define __MINGW64_VERSION_MINOR	0
+#define __MINGW64_VERSION_STATE	"beta"
 #ifdef __cplusplus
 extern "C" {
 #endif
